# sistema-gestao-escolar

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALISE_INTERFACE_QUESTOES.md  ANALISE_InterfaceCadastroEdicaoNotas.md  ANALISE_MELHORIAS_2025-12-08.md  ANALISE_SEGURANCA_SQL.md  ANALISE_main_py.md  ANALISE_main_py.md.bak  ATUALIZACAO_LISTAS_COM_ESCOLAS.md  AtaGeral.py  Ata_1a5ano.py  Ata_1a9ano.py  Ata_6a9ano.py  BACKUP_AUTOMATICO.md  BARRA_MENU_SUPERIOR.md  CHANGELOG.md  CHECKLIST_SEGURANCA.md  COMO_EDITAR_MATRICULA_COM_ESCOLAS.md  COMO_VER_ALTERACOES_HORARIOS.md  CONTRIBUTING.md  CONTROLE_DUPLICATAS.md  CORRECAO_MOVIMENTO_MENSAL_342.md  CORRECOES_HISTORICO_ESCOLAR.md  CORRECOES_INTERFACES_FUNCIONARIOS.md  DASHBOARD_ANTES_DEPOIS.md  DASHBOARD_IMPLEMENTADO.md  DISTORCAO_IDADE_SERIE_ESCOLA_60_2026.json  DISTORCAO_IDADE_SERIE_ESCOLA_60_2026.txt  Funcionario.py  GERACAO_PDF_AVALIACOES.md  GUIA_CONNECTION_POOL.md  GUIA_ENCONTRAR_MYINI.md  GUIA_INSTALACAO_FULLTEXT.md  GUIA_RAPIDO_DUPLICATAS.md  GUIA_RAPIDO_EXPORTACAO_GEDUC.md  GUIA_RAPIDO_LIVROS_FALTANTES.md  GUIA_RAPIDO_OTIMIZACOES_HISTORICO.md  GUIA_TRANSICAO_ANO_LETIVO.md  Gerar_Declaracao_Aluno.py  (+313 more)
.mypy_cache/: missing_stubs
Diario Escolar/: conexao.py  diariodeclasse.py  diariodeclasse_capa.py
atas geduc/: 1ano.txt  2ano.txt  3ano.txt  4ano.txt  5ano.txt  6anoa.txt  6anob.txt  7ano.txt  8ano.txt  9ano.txt  DIFERENCAS_ATAS_EXCEL.txt  DIFERENCAS_ATAS_EXCEL.xlsx  RELATORIO_COMPARATIVO_ATAS_2025.json  RELATORIO_COMPARATIVO_ATAS_2025.md  RelacaoSituacaoInformadaAluno_22_2_2026.xlsx  cadastro.html  declaracao.html  (+1 more)
(+2770 files in other folders)
